Fixed gaps and paddings not being symmetrical for View Workout

--- a/src/components/pages/Workout/ViewWorkout.module.css
+++ b/src/components/pages/Workout/ViewWorkout.module.css
@@ -2,12 +2,12 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 30px;
     padding: 10px;
     overflow-y: auto;
     overflow-x: hidden;
     width: 100vw;
     height: calc(100vh - 75px);
+    gap: 20px;
 }
 .header button{
     width: 50px;
@@ -35,7 +35,6 @@
     display: flex;
     flex-wrap: wrap;
     gap: 10px;
-    padding: 10px;
     border-radius: 5px;
 }
 .subtle-subtitle{
@@ -107,7 +106,7 @@
 .workout-exercises{
     height: calc(50% - 40px);
     border-radius: 5px;
-    padding: 10px;
+    padding: 10px 0;
     width: 100%;
     gap: 10px;
     display: flex;
@@ -227,5 +226,5 @@
     background-color: #111214;
 }
 h3{
-    padding-left: 15px;
+    margin-top: 15px;
 }
